--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="as">
 <head>
   <meta charset="UTF-8">
-  <title>বাতৰি - অসম</title>
+  <title>অসম ত পাৰমাণৱিক আক্ৰমণ</title>
   <style>
     * {
       margin: 0;
@@ -147,7 +147,7 @@
     <div class="news-article">
       <h1 class="news-headline">যিকোনো সময়তে হব পাৰে অসমত পাৰমাণৱিক আক্ৰমণ</h1>
       <p class="news-content">
-        নিউজ: যিকোনো সময়তে হব পাৰে অসমত পাৰমাণৱিক আক্ৰমণ। পাকিস্তানৰ প্ৰধানমন্ত্ৰীয়ে দিছে এই সতৰ্কতা। ইতিমধ্যে ভাৰতীয় সেনা সাজু হৈছে হে অসমত পাৰমাণৱিক আক্ৰমণৰ বিৰুদ্ধে ৰক্ষা কৰিবলৈ। কেন্দ্ৰীয় চৰকাৰে অসমৰ সকলো নাগৰিকক এই বিষয়ে সতৰ্ক থাকিবলৈ অনুৰোধ জনাইছে। বিশেষজ্ঞসকলৰ মতে, অসমৰ কেইবাটাও ঠাইত ৰেডিয়েছন প্ৰতিৰোধী আশ্ৰয়স্থল নিৰ্মাণ কৰা হৈছে।
+        নিউজ: যিকোনো সময়তে হব পাৰে অসমত পাৰমাণৱিক আক্ৰমণ। পাকিস্তানৰ প্ৰধানমন্ত্ৰীয়ে দিছে এই সতৰ্কতা। ইতিমধ্যে ভাৰতীয় সেনা সাজু হৈছে.........
       </p>
       <a href="index2.html" class="read-more-btn">আৰু পঢ়ক</a>
     </div>
